--- a/app/src/main/res/layout/activity_files.xml
+++ b/app/src/main/res/layout/activity_files.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,4 +10,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
-</FrameLayout>
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fabMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        app:fab_addButtonColorNormal="#2a7fb8"
+        app:fab_addButtonColorPressed="#226693"
+        app:fab_addButtonPlusIconColor="#c4d6e2"
+        app:fab_labelStyle="@style/fab_menu_label_style">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/createFolder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#2a7fb8"
+            app:fab_colorPressed="#226693"
+            app:fab_icon="@drawable/create_folder"
+            app:fab_size="normal"
+            app:fab_title="Create Folder"
+            android:onClick="onCreateFolderClick"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addFile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="#2a7fb8"
+            app:fab_colorPressed="#226693"
+            app:fab_icon="@drawable/add_file"
+            app:fab_size="normal"
+            app:fab_title="Add File"
+            android:onClick="onAddFileClick"/>
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+</RelativeLayout>
