--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:windowSoftInputMode="stateVisible|adjustResize"
     tools:context="com.uncreated.uncloud.client.view.auth.AuthActivity">
 
 
@@ -19,6 +20,7 @@
         android:hint="@string/edit_text_hint_login"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -35,6 +37,7 @@
         android:hint="@string/edit_text_hint_password"
         android:inputType="textPassword"
         android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +51,8 @@
         android:onClick="onAuthClick"
         android:text="@string/button_auth"
         app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
+        android:textSize="24sp"/>
 
     <Button
         android:id="@+id/registerButton"
@@ -58,19 +62,8 @@
         android:onClick="onRegisterClick"
         android:text="@string/button_register"
         app:layout_constraintStart_toStartOf="@+id/passwordEditText"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>
-
-    <CheckBox
-        android:id="@+id/rememberCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/button_remember_me"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/authButton"/>
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
+        android:textSize="24sp"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -82,5 +75,16 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rememberCheckBox"/>
+        app:layout_constraintTop_toBottomOf="@+id/registerButton"/>
+
+    <Button
+        android:id="@+id/changeUserButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:onClick="onChangeUserClick"
+        android:text="@string/change_user_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 </android.support.constraint.ConstraintLayout>
