--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,10 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="CloudTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="buttonStyle">@style/button_style</item>
     </style>
 
     <style name="fab_menu_label_style">
@@ -13,4 +12,11 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">20dp</item>
     </style>
+
+    <style name="button_style">
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:background">@drawable/button_shape</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
