Рефакторинг окна файлов

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:windowSoftInputMode="stateVisible|adjustResize"
-    tools:context="com.uncreated.uncloud.client.view.auth.AuthActivity">
+    tools:context="com.uncreated.uncloud.client.auth.view.AuthActivity">
 
 
     <EditText
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:onClick="onChangeUserClick"
         android:text="@string/change_user_title"
         app:layout_constraintBottom_toBottomOf="parent"
