--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,9 @@
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:background">@drawable/button_shape</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:colorAccent">@color/accent</item>
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark</item>
     </style>
 
 </resources>
