--- a/app/src/main/res/layout/activity_files.xml
+++ b/app/src/main/res/layout/activity_files.xml
@@ -1,49 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <include
+        layout="@layout/app_bar_files"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+        android:layout_height="match_parent"/>
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fabMenu"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        app:fab_addButtonColorNormal="#2a7fb8"
-        app:fab_addButtonColorPressed="#226693"
-        app:fab_addButtonPlusIconColor="#c4d6e2"
-        app:fab_labelStyle="@style/fab_menu_label_style">
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_files"
+        app:menu="@menu/activity_files_drawer"/>
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/createFolder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_colorNormal="#2a7fb8"
-            app:fab_colorPressed="#226693"
-            app:fab_icon="@drawable/create_folder"
-            app:fab_size="normal"
-            app:fab_title="@string/fab_create_folder"
-            android:onClick="onCreateFolderClick"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addFile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_colorNormal="#2a7fb8"
-            app:fab_colorPressed="#226693"
-            app:fab_icon="@drawable/add_file"
-            app:fab_size="normal"
-            app:fab_title="@string/fab_add_file"
-            android:onClick="onAddFileClick"/>
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
