--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,26 @@
     </style>
 
     <style name="button_style">
-        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColor">@color/text</item>
         <item name="android:background">@drawable/button_shape</item>
         <item name="android:textSize">20sp</item>
         <item name="android:colorAccent">@color/accent</item>
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
+    </style>
+
+    <style name="CloudTheme.NoActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="buttonStyle">@style/button_style</item>
+    </style>
+
+    <style name="CloudTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <style name="CloudTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorPrimary">@color/primary_dark</item>
     </style>
 
 </resources>
