Добавлены фрагменты и навигация в главном окне

--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -1,26 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.uncreated.uncloud.client.files.view.FilesActivity"
-    tools:showIn="@layout/app_bar_files">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             tools:context="com.uncreated.uncloud.client.files.view.FilesFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"/>
 
         <com.getbase.floatingactionbutton.FloatingActionsMenu
-            android:id="@+id/fabMenu"
+            android:id="@+id/fab_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -32,10 +28,9 @@
             app:fab_labelStyle="@style/fab_menu_label_style">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/createFolder"
+                android:id="@+id/create_folder_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="onCreateFolderClick"
                 app:fab_colorNormal="#2a7fb8"
                 app:fab_colorPressed="#226693"
                 app:fab_icon="@drawable/create_folder"
@@ -43,10 +38,9 @@
                 app:fab_title="@string/fab_create_folder"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/addFile"
+                android:id="@+id/add_file_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="onAddFileClick"
                 app:fab_colorNormal="#2a7fb8"
                 app:fab_colorPressed="#226693"
                 app:fab_icon="@drawable/add_file"
@@ -55,4 +49,5 @@
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
     </RelativeLayout>
+
 </FrameLayout>
