--- a/app/src/main/res/menu/activity_files_drawer.xml
+++ b/app/src/main/res/menu/activity_files_drawer.xml
@@ -4,18 +4,17 @@
       tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item android:title="Menu">
-            <menu>
-                <item
-                    android:id="@+id/nav_settings"
-                    android:icon="@drawable/ic_menu_manage"
-                    android:title="@string/menu_settings"/>
-                <item
-                    android:id="@+id/nav_logout"
-                    android:icon="@drawable/logout2"
-                    android:title="@string/menu_logout"/>
-            </menu>
-        </item>
+        <item
+            android:id="@+id/nav_home"
+            android:title="@string/menu_home"/>
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/menu_settings"/>
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/logout2"
+            android:title="@string/menu_logout"/>
         <item
             android:id="@+id/nav_about"
             android:title="@string/about_uncloud"/>
