--- a/app/src/main/res/layout/fragment_files.xml
+++ b/app/src/main/res/layout/fragment_files.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="com.uncreated.uncloud.client.files.view.FilesFragment">
+             tools:context="com.uncreated.uncloud.client.main.view.FilesFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
