--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.uncreated.uncloud.client.files.view.SettingsFragment">
+             tools:context="com.uncreated.uncloud.client.main.view.SettingsFragment">
 
     <ScrollView
         android:layout_width="match_parent"
