--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-             tools:context="com.uncreated.uncloud.client.main.fragment.about.AboutFragment">
+             tools:context="com.uncreated.uncloud.client.main.ui.fragment.about.AboutFragment">
 
     <TextView
         android:id="@+id/textView4"
