--- a/app/src/main/res/layout/dialog_controls.xml
+++ b/app/src/main/res/layout/dialog_controls.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,22 +17,22 @@
         android:paddingTop="12dp"
         android:textAlignment="center"
         android:textSize="24sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <include
         android:id="@+id/download"
-        layout="@layout/file_item"/>
+        layout="@layout/file_item" />
 
     <include
         android:id="@+id/upload"
-        layout="@layout/file_item"/>
+        layout="@layout/file_item" />
 
     <include
         android:id="@+id/deleteClient"
-        layout="@layout/file_item"/>
+        layout="@layout/file_item" />
 
     <include
         android:id="@+id/deleteServer"
-        layout="@layout/file_item"/>
+        layout="@layout/file_item" />
 
 </LinearLayout>
